<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.priomkhan.covid_19info.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/nav_to_detailedFragment"
            app:destination="@id/detailedFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.priomkhan.covid_19info.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.priomkhan.covid_19info.ui.about.AboutFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/detailedFragment"
        android:name="com.priomkhan.covid_19info.ui.detailed.DetailedFragment"
        android:label="@string/fragment_detailed_header"
        tools:layout="@layout/fragment_detailed" />
</navigation>
