<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/aboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutBody"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/creditsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Credits"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/creditsBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditsBody"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/project1UsesInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/project1UsesInfo"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/projectCreditHeader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/projectCreditHeader1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projectCreditUrl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/projectCreditUrl1"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/project2UsesInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/project2UsesInfo"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/projectCreditHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/projectCreditHeader2"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projectCreditUrl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/projectCreditUrl2"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/project3UsesInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/project3UsesInfo"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/projectCreditHeader3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/projectCreditHeader3"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projectCreditUrl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/projectCreditUrl3"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>