<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="8dp"
    cardView:cardElevation="8dp"
    cardView:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRssTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rss_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRssPubDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PubUpdateDate"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRssContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RssContent"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>
</androidx.cardview.widget.CardView>