<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hmRecycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grid_item_background"
    android:clickable="true"
    android:focusable="true"
    android:padding="4dp">

    <ImageView
        android:id="@+id/giFlagImage"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/flagImage"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/giCountryName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/giCountryHeader"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/giCaseHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/cHeader"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FF6D00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/giDeathHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/dHeader"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FF0000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/giRecoveredHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rHeader"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#4CAF50"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/giCaseCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="0"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/giDeathCount"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="0"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/giRecoveredCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="0"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>